feat(v2.0): finalize simulation core, tests, docs, offline mode